--- a/client/src/app/job-listing-page/job-listing-page.component.css
+++ b/client/src/app/job-listing-page/job-listing-page.component.css
@@ -1,6 +1,6 @@
 a.selected,
 a.selected:hover {
-  background-color: #007bff;
+  background-color: #16293d;
   color: #fff;
 }
 
@@ -8,9 +8,10 @@ a {
   cursor: pointer;
 }
 .header {
-  height: 460vh;
-  background-image:linear-gradient(rgb(159, 185, 206),rgba(233, 221, 221, 0.5)),url(ang.png);
+  height: 400vh;
+  background-image:linear-gradient(rgb(159, 185, 206),rgba(233, 221, 221, 0)),url(ang.png);
    background-size: cover; 
+   
 
 }
 .clk-search{
@@ -19,4 +20,31 @@ a {
     font-size :45px;
     letter-spacing: 2px;
     text-align: center;
+}
+.btn{
+  height: 60px;
+  width: 350px;
+  background: #9cac10;
+  border:black;
+  color:#000;
+  border-radius: 25px;
+}
+.btn :hover{
+  background: #080a01;
+    cursor: pointer;
+}
+/* .form-box{
+  background: rgba(40, 128, 155, 0.479);
+  padding: 50px;
+  margin-bottom: 200px;
+} */
+.search-page{
+  background-color: rgba(194, 182, 173, 0.897);
+  width: 100vh;
+  height: 8vh;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-decoration-style: double;
+}
+.group{
+ background-color: rgba(174, 228, 25, 0.349);
 }
