--- a/client/src/app/register-page/register-page.component.html
+++ b/client/src/app/register-page/register-page.component.html
@@ -1,9 +1,9 @@
 <div class="header">
   <div class="row">
-    <div class="col-md-4 offset-md-4 py-4">
+    <div class="col-md-3 offset-md-4 py-4">
       <div class="card">
         <div class="card-header bg-dark text-light text-center text-uppercase">
-          <strong>Register an Account</strong>
+          <strong>Sin up</strong>
         </div>
         <div class="card-body">
           <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
