--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -21,22 +21,22 @@
           </ul>
         </div>
 
-        <ng-template #authNavbar class="navbar-collapse collapse">
-          <ul class="navbar-nav mr-auto">
+        <ng-template #authNavbar class="navbar-collapse collapse ">
+          <ul class="navbar-nav mr-auto ">
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/', 'u', 'jobs']">My Jobs</a>
+              <a class="nav-link" [routerLink]="['/', 'u', 'jobs']" ><button type="button" class="btn btn-primary">My Jobs</button></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/', 'u', 'jobs', 'add']">Add Job</a>
+              <a class="nav-link" [routerLink]="['/', 'u', 'jobs', 'add']" ><button type="button" class="btn btn-primary">Add Job</button></a>
             </li>
             <li class="nav-item">
-             <a class="nav-link" [routerLink]="['/u/profile']">Profile</a>
+             <a class="nav-link" [routerLink]="['/u/profile']" ><button type="button" class="btn btn-primary">Profile</button></a>
             </li>
 
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" (click)="onLogoutClicked()">Logout</a>
+              <a class="nav-link btn-success " (click)="onLogoutClicked()">Logout</a>
             </li>
           </ul>
         </ng-template>
