--- a/client/src/app/user-job-apps-page/user-job-apps-page.component.html
+++ b/client/src/app/user-job-apps-page/user-job-apps-page.component.html
@@ -1,7 +1,7 @@
 <div class="container py-5">
   <div class="row">
     <div class="col-md-12">
-      <a [routerLink]="['/u/jobs', jobId]" class="mb-5">< Go back</a>
+      <a [routerLink]="['/u/jobs', jobId]" class="mb-5">Go back</a>
 
       <h3 class="mt-3">Applicants for position <span class="text-primary">{{job.title}}</span> at <span class="text-info">{{job.company}}</span></h3>
       <p class="lead">Location: <span class="text-success">{{job.location}}</span></p>
