--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -50,6 +50,6 @@
 
 <div class="container mt-5">
   <footer class="footer">
-    <p class="text-center">Made by MIU Job Search Pro</p>
+    <p class="text-center">Made by MIU Job Search Pro 2020</p>
   </footer>
 </div>
